# rust_uni

./: .gitignore  Cargo.toml  Makefile  README.md
greppy/: LICENSE  README.md
greppy/src/: main.rs
src/: main.rs
taskie/: .gitignore  Cargo.toml  Makefile
taskie/src/: main.rs
taskie/src/database/: mod.rs
taskie/src/services/: task.rs
todo/: Cargo.toml  task.db  tasks.db
todo/src/: main.rs
todo/src/database/: mod.rs
todo/src/services/: task.rs
wins/: Cargo.toml  Dockerfile  Makefile
wins/src/: main.rs  routes.rs
wins/src/templates/: mod.rs
wins/templates/: index.html  layout.html
